--- a/templates/registro_exitoso.html
+++ b/templates/registro_exitoso.html
@@ -20,7 +20,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="{{ url_for('main.inicio') }}">Inicio</a>
+        <a class="nav-link active" aria-current="page" href="{{ url_for('main.inicio') }}">foiwefu</a>
         <a class="nav-link" href="{{ url_for('tienda_bp.tienda') }}">Tienda</a>
         <a class="nav-link" href="{{ url_for('main.about') }}">Sobre nosotros</a>
         <a class="nav-link" href="{{ url_for('cuenta.registro') }}">Registrarse</a>
