--- a/templates/registro.html
+++ b/templates/registro.html
@@ -24,9 +24,12 @@
         <a class="nav-link active" aria-current="page" href="{{ url_for('main.inicio') }}">Inicio</a>
         <a class="nav-link" href="{{ url_for('tienda_bp.tienda') }}">Tienda</a>
         <a class="nav-link" href="{{ url_for('main.about') }}">Sobre nosotros</a>
+        {% if session.get('user_info') %}
+        <a class="nav-link" href="{{ url_for('cuenta.logout') }}">Cerrar sesión</a>
+        {% else %}
         <a class="nav-link" href="{{ url_for('cuenta.registro') }}">Registrarse</a>
         <a class="nav-link" href="{{ url_for('cuenta.login') }}">Iniciar sesión</a>
-
+        {% endif %}
       </div>
     </div>
   </div>
